--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - final</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'><link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -51,7 +51,8 @@
     <p>&copy; Kaylin Sevigne 2020</p>
   </footer>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./scripts/script.js"></script>
+  <script  src="./scripts/final.js"></script>
 
 </body>
 </html>
