--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="https://github.com/thekaysev/final" target="_blank">GitHub</a>
         </li>
         <li class="nav-item">
