--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a class="nav-link" href="https://github.com/thekaysev/final" target="_blank">GitHub</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" target="_blank">Nu</a>
+          <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fthekaysev.github.io%2Ffinal%2F" target="_blank">Nu</a>
         </li>
         <li>
-          <a class="nav-link" href="#" target="_blank">WAVE</a>
+          <a class="nav-link" href="https://wave.webaim.org/report#/https://thekaysev.github.io/final/" target="_blank">WAVE</a>
         </li>
       </ul>
       </form>
