--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <p>&copy; Kaylin Sevigne 2020</p>
   </footer>
 <!-- partial -->
+  <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
   <script  src="./scripts/script.js"></script>
   <script  src="./scripts/final.js"></script>
 
