--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">CIS 376</h1>
+        <div class="desc">
+          <p>A fundamental course in Web Development utilizing contemporary standards, methods, and tools for students to develop skills in creating and deploying web-based content. Students learn development concepts spanning markup and programming languages and libraries, local and hosted environments, versioning control systems, and development tools. </p>
+        </div>
       </div>
     </div>
 
