--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <!-- partial -->
   <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
   <script  src="./scripts/script.js"></script>
+  <script src="./data/final.JSON"></script>
 
 </body>
 </html>
