--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">CIS 376</h1>
-        <div class="desc" id="pleasework">
-          <h2>Course Description</h2>
+        <div id="pleasework">
+   
         </div>
       </div>
     </div>
