--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="display-3">CIS 376</h1>
 		<div class="card">
 		<div class="card-body">
-		<h4 class="card-title">Course Description</h4>
+		<h2 class="card-title">Course Summary</h2>
         <section id="pleasework"></section>
 		</div>
 		</div>
