--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="display-3">CIS 376</h1>
 		<div class="card">
 		<div class="card-body">
-		<h2 class="card-title">Course Summary</h2>
+		<h2 class="card-title"><b>General Course Information</b></h2>
         <section id="pleasework"></section>
 		</div>
 		</div>
