--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="card">
 		<div class="card-body">
 		<h2 class="card-title"><b>General Course Information</b></h2>
-		<section id="pleasework"><h4></h4></section>
+		<section id="pleasework"></section>
 		</div>
 		</div>
       </div>
